cosmetic fixes and tests

--- a/packages/ui/src/locales/de.json
+++ b/packages/ui/src/locales/de.json
@@ -124,7 +124,271 @@
     "currency": "Währung",
     "type": "Typ",
     "code": "Code",
-    "period": "Zeitraum"
+    "period": "Zeitraum",
+    "firstName": "Vorname",
+    "lastName": "Nachname",
+    "email": "E-Mail",
+    "phone": "Telefon",
+    "address": "Adresse",
+    "dateFrom": "Datum von",
+    "dateTo": "Datum bis",
+    "upload": "Hochladen",
+    "confirmDelete": "Löschen bestätigen",
+    "confirmDeleteMessage": "Sind Sie sicher, dass Sie dieses Element löschen möchten?",
+    "add": "Hinzufügen",
+    "from": "Von",
+    "to": "Bis",
+    "category": "Kategorie",
+    "generate": "Generieren",
+    "load": "Laden",
+    "notes": "Notizen",
+    "reset": "Zurücksetzen",
+    "submit": "Absenden",
+    "balance": "Saldo"
+  },
+  "accounting": {
+    "accounts": "Kontenplan",
+    "journalEntries": "Buchungen",
+    "generalLedger": "Hauptbuch",
+    "financialStatements": "Finanzberichte",
+    "fixedAssets": "Anlagevermögen",
+    "bankAccounts": "Bankkonten",
+    "reconciliation": "Bankabstimmung",
+    "taxReturns": "Steuererklärungen",
+    "exchangeRates": "Wechselkurse",
+    "newJournalEntry": "Neue Buchung",
+    "editJournalEntry": "Buchung bearbeiten",
+    "reference": "Referenz",
+    "lines": "Positionen",
+    "addLine": "Position hinzufügen",
+    "account": "Konto",
+    "debit": "Soll",
+    "credit": "Haben",
+    "saveAndPost": "Speichern und Buchen",
+    "unbalanced": "Buchung ist unausgeglichen",
+    "post": "Buchen",
+    "void": "Stornieren",
+    "bankAccount": "Bankkonto",
+    "statementDate": "Kontoauszugsdatum",
+    "statementBalance": "Kontoauszugssaldo",
+    "bankTransactions": "Banktransaktionen",
+    "ledgerTransactions": "Buchungstransaktionen",
+    "difference": "Differenz",
+    "match": "Zuordnen",
+    "complete": "Abschließen",
+    "bank": "Bank",
+    "accountNumber": "Kontonummer",
+    "iban": "IBAN",
+    "defaultAccount": "Standardkonto",
+    "accountCode": "Kontonummer",
+    "accountType": "Kontotyp",
+    "subType": "Untertyp",
+    "parentAccount": "Übergeordnetes Konto",
+    "depreciationSchedule": "Abschreibungsplan",
+    "purchaseDate": "Kaufdatum",
+    "purchasePrice": "Kaufpreis",
+    "depreciationMethod": "Abschreibungsmethode",
+    "usefulLife": "Nutzungsdauer",
+    "payable": "Verbindlichkeiten",
+    "refund": "Erstattung",
+    "lineItems": "Positionen",
+    "taxCollected": "Erhobene Steuer",
+    "taxPaid": "Gezahlte Steuer",
+    "netPayable": "Netto-Verbindlichkeit",
+    "fromCurrency": "Von Währung",
+    "toCurrency": "Zu Währung",
+    "rate": "Kurs",
+    "source": "Quelle",
+    "trialBalance": "Summen- und Saldenliste",
+    "profitAndLoss": "Gewinn- und Verlustrechnung",
+    "balanceSheet": "Bilanz",
+    "asOfDate": "Stichtag",
+    "fiscalYear": "Geschäftsjahr",
+    "generateReport": "Bericht erstellen",
+    "revenue": "Umsatz",
+    "totalRevenue": "Gesamtumsatz",
+    "expenses": "Aufwendungen",
+    "totalExpenses": "Gesamtaufwendungen",
+    "netIncome": "Nettoergebnis",
+    "selectDateRange": "Zeitraum für Berichterstellung wählen",
+    "assets": "Aktiva",
+    "totalAssets": "Gesamtaktiva",
+    "liabilities": "Passiva",
+    "totalLiabilities": "Gesamtpassiva",
+    "equity": "Eigenkapital",
+    "totalEquity": "Gesamteigenkapital",
+    "totalLiabilitiesAndEquity": "Passiva und Eigenkapital gesamt",
+    "selectDate": "Datum für Berichterstellung wählen",
+    "entryNumber": "Buchung Nr.",
+    "exchangeRate": "Wechselkurs",
+    "currentValue": "Aktueller Wert",
+    "default": "Standard"
+  },
+  "payroll": {
+    "employees": "Mitarbeiter",
+    "employee": "Mitarbeiter",
+    "newEmployee": "Neuer Mitarbeiter",
+    "editEmployee": "Mitarbeiter bearbeiten",
+    "payrollRuns": "Lohnabrechnungsläufe",
+    "payslips": "Gehaltsabrechnungen",
+    "timesheets": "Arbeitszeiterfassung",
+    "personalInfo": "Persönliche Daten",
+    "employmentDetails": "Beschäftigungsdetails",
+    "salary": "Gehalt",
+    "deductions": "Abzüge",
+    "benefits": "Leistungen",
+    "dateOfBirth": "Geburtsdatum",
+    "nationalId": "Personalausweisnr.",
+    "employeeNumber": "Mitarbeiternr.",
+    "department": "Abteilung",
+    "position": "Position",
+    "employmentType": "Beschäftigungsart",
+    "startDate": "Startdatum",
+    "baseSalary": "Grundgehalt",
+    "payFrequency": "Zahlungsintervall",
+    "bankAccount": "Bankkonto",
+    "taxId": "Steuernummer",
+    "addDeduction": "Abzug hinzufügen",
+    "addBenefit": "Leistung hinzufügen",
+    "downloadPdf": "PDF herunterladen",
+    "earnings": "Bezüge",
+    "employeeCount": "Mitarbeiterzahl",
+    "grossPay": "Bruttolohn",
+    "hoursWorked": "Geleistete Stunden",
+    "netPay": "Nettolohn",
+    "overtime": "Überstunden",
+    "payrollRun": "Lohnabrechnung",
+    "payslipDetail": "Gehaltsabrechnungsdetail",
+    "period": "Zeitraum",
+    "periodEnd": "Periodenende",
+    "periodStart": "Periodenstart",
+    "timesheetEntry": "Arbeitszeiterfassungseintrag",
+    "totalCost": "Gesamtkosten",
+    "totalDeductions": "Gesamtabzüge"
+  },
+  "hr": {
+    "departments": "Abteilungen",
+    "leaveManagement": "Urlaubsverwaltung",
+    "businessTrips": "Geschäftsreisen",
+    "employeeDocuments": "Mitarbeiterdokumente",
+    "requestLeave": "Urlaub beantragen",
+    "leaveRequests": "Urlaubsanträge",
+    "leaveBalances": "Urlaubssalden",
+    "leaveType": "Urlaubsart",
+    "days": "Tage",
+    "entitled": "Anspruch",
+    "used": "Genommen",
+    "remaining": "Verbleibend",
+    "manager": "Vorgesetzter",
+    "employeeCount": "Mitarbeiterzahl",
+    "parentDepartment": "Übergeordnete Abteilung",
+    "destination": "Zielort",
+    "purpose": "Zweck",
+    "budget": "Budget",
+    "expiryDate": "Ablaufdatum",
+    "file": "Datei",
+    "uploadDate": "Hochladedatum"
+  },
+  "crm": {
+    "leads": "Interessenten",
+    "deals": "Geschäfte / Pipeline",
+    "activities": "Aktivitäten",
+    "contact": "Kontakt",
+    "stage": "Phase",
+    "dealValue": "Geschäftswert",
+    "probability": "Wahrscheinlichkeit",
+    "expectedClose": "Erwarteter Abschluss",
+    "pipeline": "Pipeline",
+    "assignedTo": "Zugewiesen an",
+    "company": "Firma",
+    "convert": "Konvertieren",
+    "dueDate": "Fälligkeitsdatum",
+    "source": "Quelle",
+    "subject": "Betreff"
+  },
+  "erp": {
+    "billOfMaterials": "Stücklisten",
+    "productionOrders": "Fertigungsaufträge",
+    "constructionProjects": "Bauprojekte",
+    "pos": "Kasse",
+    "noActiveSession": "Keine aktive Sitzung. Öffnen Sie eine Sitzung, um mit dem Verkauf zu beginnen.",
+    "openSession": "Sitzung öffnen",
+    "closeSession": "Sitzung schließen",
+    "session": "Sitzung",
+    "openedAt": "Geöffnet am",
+    "searchProducts": "Produkte suchen",
+    "cart": "Warenkorb",
+    "emptyCart": "Warenkorb ist leer",
+    "subtotal": "Zwischensumme",
+    "tax": "Steuer",
+    "total": "Gesamt",
+    "paymentMethod": "Zahlungsmethode",
+    "completeSale": "Verkauf abschließen",
+    "openingBalance": "Anfangsbestand",
+    "closingBalance": "Endbestand",
+    "totalSales": "Gesamtverkäufe",
+    "bom": "Stückliste",
+    "budget": "Budget",
+    "client": "Kunde",
+    "component": "Komponente",
+    "components": "Komponenten",
+    "complete": "Abschließen",
+    "orderNumber": "Auftragsnummer",
+    "outputProduct": "Endprodukt",
+    "outputQuantity": "Ausgabemenge",
+    "plannedEnd": "Geplantes Ende",
+    "plannedStart": "Geplanter Start",
+    "progress": "Fortschritt",
+    "projectCode": "Projektcode",
+    "quantity": "Menge",
+    "spent": "Ausgegeben",
+    "start": "Start",
+    "unit": "Einheit",
+    "version": "Version",
+    "wastage": "Ausschuss"
+  },
+  "settings": {
+    "organization": "Organisation",
+    "users": "Benutzer & Rollen",
+    "generalInfo": "Allgemeine Informationen",
+    "slug": "Kurzkennzeichen",
+    "baseCurrency": "Basiswährung",
+    "defaultLocale": "Standardsprache",
+    "taxConfig": "Steuerkonfiguration",
+    "vatEnabled": "MwSt. aktiviert",
+    "vatRates": "MwSt.-Sätze",
+    "ratePercent": "Satz %",
+    "default": "Standard",
+    "addVatRate": "MwSt.-Satz hinzufügen",
+    "payrollSettings": "Lohnabrechnungseinstellungen",
+    "payrollCycle": "Abrechnungszyklus",
+    "payDay": "Zahltag",
+    "workingHoursPerDay": "Arbeitsstunden pro Tag",
+    "workingDaysPerWeek": "Arbeitstage pro Woche",
+    "modules": "Module",
+    "subscription": "Abonnement",
+    "plan": "Plan",
+    "validUntil": "Gültig bis",
+    "role": "Rolle",
+    "inviteUser": "Benutzer einladen",
+    "permissions": "Berechtigungen",
+    "sendInvite": "Einladung senden",
+    "user": "Benutzer"
+  },
+  "admin": {
+    "auditLog": "Prüfprotokoll",
+    "action": "Aktion",
+    "changeDetails": "Änderungsdetails",
+    "entity": "Entität",
+    "entityId": "Entitäts-ID",
+    "field": "Feld",
+    "metadata": "Metadaten",
+    "module": "Modul",
+    "newValue": "Neuer Wert",
+    "noChanges": "Keine Änderungen",
+    "oldValue": "Alter Wert",
+    "timestamp": "Zeitstempel",
+    "user": "Benutzer"
   },
   "validation": {
     "required": "Dieses Feld ist erforderlich"
