--- a/packages/ui/src/locales/mk.json
+++ b/packages/ui/src/locales/mk.json
@@ -124,7 +124,271 @@
     "currency": "Валута",
     "type": "Тип",
     "code": "Код",
-    "period": "Период"
+    "period": "Период",
+    "firstName": "Име",
+    "lastName": "Презиме",
+    "email": "Е-пошта",
+    "phone": "Телефон",
+    "address": "Адреса",
+    "dateFrom": "Од Датум",
+    "dateTo": "До Датум",
+    "upload": "Прикачи",
+    "confirmDelete": "Потврди Бришење",
+    "confirmDeleteMessage": "Дали сте сигурни дека сакате да го избришете овој елемент?",
+    "add": "Додади",
+    "from": "Од",
+    "to": "До",
+    "category": "Категорија",
+    "generate": "Генерирај",
+    "load": "Вчитај",
+    "notes": "Белешки",
+    "reset": "Ресетирај",
+    "submit": "Поднеси",
+    "balance": "Салдо"
+  },
+  "accounting": {
+    "accounts": "Конто План",
+    "journalEntries": "Книжења",
+    "generalLedger": "Главна Книга",
+    "financialStatements": "Финансиски Извештаи",
+    "fixedAssets": "Основни Средства",
+    "bankAccounts": "Банкарски Сметки",
+    "reconciliation": "Банкарска Рекоцилијација",
+    "taxReturns": "Даночни Пријави",
+    "exchangeRates": "Курсна Листа",
+    "newJournalEntry": "Ново Книжење",
+    "editJournalEntry": "Измени Книжење",
+    "reference": "Референца",
+    "lines": "Ставки",
+    "addLine": "Додади Ставка",
+    "account": "Сметка",
+    "debit": "Должи",
+    "credit": "Побарува",
+    "saveAndPost": "Зачувај и Книжи",
+    "unbalanced": "Книжењето не е балансирано",
+    "post": "Книжи",
+    "void": "Поништи",
+    "bankAccount": "Банкарска Сметка",
+    "statementDate": "Датум на Извод",
+    "statementBalance": "Салдо на Извод",
+    "bankTransactions": "Банкарски Трансакции",
+    "ledgerTransactions": "Книговодствени Трансакции",
+    "difference": "Разлика",
+    "match": "Спари",
+    "complete": "Заврши",
+    "bank": "Банка",
+    "accountNumber": "Број на Сметка",
+    "iban": "IBAN",
+    "defaultAccount": "Подразбирана Сметка",
+    "accountCode": "Код на Сметка",
+    "accountType": "Тип на Сметка",
+    "subType": "Подтип",
+    "parentAccount": "Родителска Сметка",
+    "depreciationSchedule": "Амортизациски План",
+    "purchaseDate": "Датум на Набавка",
+    "purchasePrice": "Набавна Цена",
+    "depreciationMethod": "Метод на Амортизација",
+    "usefulLife": "Корисен Век",
+    "payable": "Обврски",
+    "refund": "Поврат",
+    "lineItems": "Ставки",
+    "taxCollected": "Наплатен Данок",
+    "taxPaid": "Платен Данок",
+    "netPayable": "Нето Обврска",
+    "fromCurrency": "Од Валута",
+    "toCurrency": "До Валута",
+    "rate": "Курс",
+    "source": "Извор",
+    "trialBalance": "Бруто Биланс",
+    "profitAndLoss": "Биланс на Успех",
+    "balanceSheet": "Биланс на Состојба",
+    "asOfDate": "На Датум",
+    "fiscalYear": "Фискална Година",
+    "generateReport": "Генерирај Извештај",
+    "revenue": "Приходи",
+    "totalRevenue": "Вкупни Приходи",
+    "expenses": "Расходи",
+    "totalExpenses": "Вкупни Расходи",
+    "netIncome": "Нето Приход",
+    "selectDateRange": "Изберете период за генерирање на извештај",
+    "assets": "Средства",
+    "totalAssets": "Вкупни Средства",
+    "liabilities": "Обврски",
+    "totalLiabilities": "Вкупни Обврски",
+    "equity": "Капитал",
+    "totalEquity": "Вкупен Капитал",
+    "totalLiabilitiesAndEquity": "Вкупни Обврски и Капитал",
+    "selectDate": "Изберете датум за генерирање на извештај",
+    "entryNumber": "Книжење #",
+    "exchangeRate": "Девизен Курс",
+    "currentValue": "Тековна Вредност",
+    "default": "Подразбиран"
+  },
+  "payroll": {
+    "employees": "Вработени",
+    "employee": "Вработен",
+    "newEmployee": "Нов Вработен",
+    "editEmployee": "Измени Вработен",
+    "payrollRuns": "Пресметки на Плати",
+    "payslips": "Платни Листи",
+    "timesheets": "Евиденција на Работни Часови",
+    "personalInfo": "Лични Податоци",
+    "employmentDetails": "Податоци за Вработување",
+    "salary": "Плата",
+    "deductions": "Одбитоци",
+    "benefits": "Бенефиции",
+    "dateOfBirth": "Датум на Раѓање",
+    "nationalId": "ЕМБГ",
+    "employeeNumber": "Број на Вработен",
+    "department": "Одделение",
+    "position": "Позиција",
+    "employmentType": "Тип на Вработување",
+    "startDate": "Датум на Почеток",
+    "baseSalary": "Основна Плата",
+    "payFrequency": "Периодичност на Плаќање",
+    "bankAccount": "Банкарска Сметка",
+    "taxId": "Даночен Број",
+    "addDeduction": "Додади Одбиток",
+    "addBenefit": "Додади Бенефиција",
+    "downloadPdf": "Преземи PDF",
+    "earnings": "Примања",
+    "employeeCount": "Број на Вработени",
+    "grossPay": "Бруто Плата",
+    "hoursWorked": "Одработени Часови",
+    "netPay": "Нето Плата",
+    "overtime": "Прекувремена Работа",
+    "payrollRun": "Пресметка на Плати",
+    "payslipDetail": "Детали на Платна Листа",
+    "period": "Период",
+    "periodEnd": "Крај на Период",
+    "periodStart": "Почеток на Период",
+    "timesheetEntry": "Запис на Работни Часови",
+    "totalCost": "Вкупен Трошок",
+    "totalDeductions": "Вкупни Одбитоци"
+  },
+  "hr": {
+    "departments": "Одделенија",
+    "leaveManagement": "Управување со Одмори",
+    "businessTrips": "Службени Патувања",
+    "employeeDocuments": "Документи на Вработени",
+    "requestLeave": "Барање за Одмор",
+    "leaveRequests": "Барања за Одмор",
+    "leaveBalances": "Салда на Одмори",
+    "leaveType": "Тип на Одмор",
+    "days": "Денови",
+    "entitled": "Следува",
+    "used": "Искористени",
+    "remaining": "Преостанати",
+    "manager": "Менаџер",
+    "employeeCount": "Број на Вработени",
+    "parentDepartment": "Главно Одделение",
+    "destination": "Дестинација",
+    "purpose": "Цел",
+    "budget": "Буџет",
+    "expiryDate": "Датум на Истекување",
+    "file": "Датотека",
+    "uploadDate": "Датум на Прикачување"
+  },
+  "crm": {
+    "leads": "Потенцијални Клиенти",
+    "deals": "Зделки / Проток",
+    "activities": "Активности",
+    "contact": "Контакт",
+    "stage": "Фаза",
+    "dealValue": "Вредност на Зделка",
+    "probability": "Веројатност",
+    "expectedClose": "Очекувано Затворање",
+    "pipeline": "Проток",
+    "assignedTo": "Доделен на",
+    "company": "Компанија",
+    "convert": "Конвертирај",
+    "dueDate": "Рок",
+    "source": "Извор",
+    "subject": "Предмет"
+  },
+  "erp": {
+    "billOfMaterials": "Норматив на Материјали",
+    "productionOrders": "Производствени Налози",
+    "constructionProjects": "Градежни Проекти",
+    "pos": "Каса",
+    "noActiveSession": "Нема активна сесија. Отворете сесија за да почнете со продажба.",
+    "openSession": "Отвори Сесија",
+    "closeSession": "Затвори Сесија",
+    "session": "Сесија",
+    "openedAt": "Отворена На",
+    "searchProducts": "Барај Производи",
+    "cart": "Кошничка",
+    "emptyCart": "Кошничката е празна",
+    "subtotal": "Меѓузбир",
+    "tax": "Данок",
+    "total": "Вкупно",
+    "paymentMethod": "Начин на Плаќање",
+    "completeSale": "Заврши Продажба",
+    "openingBalance": "Почетно Салдо",
+    "closingBalance": "Крајно Салдо",
+    "totalSales": "Вкупна Продажба",
+    "bom": "Норматив на Материјали",
+    "budget": "Буџет",
+    "client": "Клиент",
+    "component": "Компонента",
+    "components": "Компоненти",
+    "complete": "Заврши",
+    "orderNumber": "Број на Налог",
+    "outputProduct": "Излезен Производ",
+    "outputQuantity": "Излезна Количина",
+    "plannedEnd": "Планиран Крај",
+    "plannedStart": "Планиран Почеток",
+    "progress": "Прогрес",
+    "projectCode": "Код на Проект",
+    "quantity": "Количина",
+    "spent": "Потрошено",
+    "start": "Почеток",
+    "unit": "Единица",
+    "version": "Верзија",
+    "wastage": "Кало"
+  },
+  "settings": {
+    "organization": "Организација",
+    "users": "Корисници и Улоги",
+    "generalInfo": "Општи Информации",
+    "slug": "Краток Код",
+    "baseCurrency": "Основна Валута",
+    "defaultLocale": "Подразбиран Јазик",
+    "taxConfig": "Даночна Конфигурација",
+    "vatEnabled": "ДДВ Активирано",
+    "vatRates": "Стапки на ДДВ",
+    "ratePercent": "Стапка %",
+    "default": "Подразбирано",
+    "addVatRate": "Додади Стапка на ДДВ",
+    "payrollSettings": "Поставки за Плати",
+    "payrollCycle": "Циклус на Плаќање",
+    "payDay": "Ден на Плаќање",
+    "workingHoursPerDay": "Работни Часови на Ден",
+    "workingDaysPerWeek": "Работни Денови во Недела",
+    "modules": "Модули",
+    "subscription": "Претплата",
+    "plan": "План",
+    "validUntil": "Важи До",
+    "role": "Улога",
+    "inviteUser": "Покани Корисник",
+    "permissions": "Дозволи",
+    "sendInvite": "Испрати Покана",
+    "user": "Корисник"
+  },
+  "admin": {
+    "auditLog": "Ревизорска Трага",
+    "action": "Акција",
+    "changeDetails": "Детали на Промена",
+    "entity": "Ентитет",
+    "entityId": "ID на Ентитет",
+    "field": "Поле",
+    "metadata": "Метаподатоци",
+    "module": "Модул",
+    "newValue": "Нова Вредност",
+    "noChanges": "Нема Промени",
+    "oldValue": "Стара Вредност",
+    "timestamp": "Временски Печат",
+    "user": "Корисник"
   },
   "validation": {
     "required": "Ова поле е задолжително"
