--- a/packages/ui/src/locales/de.json
+++ b/packages/ui/src/locales/de.json
@@ -1,5 +1,5 @@
 {
-  "app": { "name": "Leger", "tagline": "Komplette ERP-Lösung" },
+  "app": { "name": "Ledger", "tagline": "Komplette ERP-Lösung" },
   "nav": {
     "dashboard": "Dashboard",
     "accounting": "Buchhaltung",
@@ -66,7 +66,7 @@
     "orgSlug": "Kurzkennzeichen",
     "baseCurrency": "Basiswährung",
     "locale": "Sprache",
-    "signInTitle": "Bei Leger anmelden",
+    "signInTitle": "Bei Ledger anmelden",
     "registerTitle": "Konto erstellen",
     "noAccount": "Kein Konto?",
     "hasAccount": "Bereits ein Konto?",
