--- a/packages/ui/src/locales/en.json
+++ b/packages/ui/src/locales/en.json
@@ -1,5 +1,5 @@
 {
-  "app": { "name": "Leger", "tagline": "Complete ERP Solution" },
+  "app": { "name": "Ledger", "tagline": "Complete ERP Solution" },
   "nav": {
     "dashboard": "Dashboard",
     "accounting": "Accounting",
@@ -66,7 +66,7 @@
     "orgSlug": "Organization Slug",
     "baseCurrency": "Base Currency",
     "locale": "Language",
-    "signInTitle": "Sign In to Leger",
+    "signInTitle": "Sign In to Ledger",
     "registerTitle": "Create Account",
     "noAccount": "Don't have an account?",
     "hasAccount": "Already have an account?",
