landing page; payment; edit fixes

--- a/packages/ui/src/locales/bg.json
+++ b/packages/ui/src/locales/bg.json
@@ -397,6 +397,7 @@
     "companyName": "Име на фирмата",
     "email": "Имейл",
     "phone": "Телефон",
+    "mobile": "Мобилен",
     "taxId": "ЕИК",
     "paymentTerms": "Условия за плащане",
     "days": "дни",
