--- a/packages/ui/src/locales/mk.json
+++ b/packages/ui/src/locales/mk.json
@@ -397,6 +397,7 @@
     "companyName": "Име на Фирма",
     "email": "Е-пошта",
     "phone": "Телефон",
+    "mobile": "Мобилен",
     "taxId": "Даночен Број",
     "paymentTerms": "Рок на Плаќање",
     "days": "денови",
